# receipts-system

./: .gitignore  CLAUDE.md  README.md  compose.yml  main.py  pyproject.toml
.kiro/specs/receipts-workflow/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: main.py  ocr.py  zip.py
src/services/: image_conversion.py  image_converter.py  ocr_processor.py  test_image_conversion.py  webp_storage.py
tests/: test_image_converter.py  test_ocr_processor.py  test_webp_storage.py
