[project]
name = "receipts-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pymupdf>=1.27.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
